--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -1,18 +1,21 @@
-<h4>Agregar Personaje</h4>
+<h4>New Character</h4>
 <form class="row" (ngSubmit)="emitCharacter()">
+  <label>Name:</label>
   <input
     type="text"
     [(ngModel)]="character.name"
     name="name"
     class="form-control mb-2"
-    placeholder="Nombre"
+    placeholder="Character Name"
+
   />
+  <label>Power:</label>
   <input
     type="number"
     [(ngModel)]="character.power"
     name="power"
     class="form-control mb-2"
-    placeholder="Poder"
+    placeholder="Character Power"
   />
   <button type="submit" class="btn btn-primary">Agregar</button>
   <!-- <pre>{{ character | json }}</pre> -->
