--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -1,4 +1,4 @@
-<h4>Listado</h4>
+<h4>List of Characters</h4>
 <ul class="list-group">
   <!-- <li class="list-group-item">Krillin - 500</li>
   <li class="list-group-item">Goku - 10000</li> -->
@@ -26,7 +26,7 @@
     }"
   >
     <div>
-      <span class="text-primary"> {{ totalItems }}-{{ i + 1 }}. </span>
+      <!-- <span class="text-primary"> {{ totalItems }}-{{ i + 1 }}. </span> -->
       <span>{{ character.name }} - </span>
       <strong> Power: </strong>
       <span>{{ character.power }}</span>
